ingress.yaml
#https://github.com/kubernetes/ingress-nginx/issues/3122
#https://www.digitalocean.com/community/tutorials/how-to-set-up-an-nginx-ingress-with-cert-manager-on-digitalocean-kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cube-ingress
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/use-regex: "true"    
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/cubeui(/|$)(.*) /$2 break;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fluentsoul.org
    secretName: tls-secret
  rules:
  - host: "fluentsoul.org"
    http:
      paths:
        - path: "/cubeui(/|$)(.*)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: cube3d-ui-service-bridge
              port:
                number: 443
        - path: "/cube"
          pathType: Prefix
          backend:
            service:
              name: cube3d-backend-service-bridge
              port:
                number: 443
        - path: "/idp"
          pathType: Prefix
          backend:
            service:
              name: security-server-service-bridge
              port:
                number: 443
